--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -1,76 +1,78 @@
-Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, The Mountain Goats
-    -- Amy aka Spent Gladiator 1, Flies Are Spies From Hell - Welcome Wolves, World/Inferno
-    Friendship Society - Cats Are Not Lucky Creatures, The Decemberists - On The Bus
-    Mall, Rubblebucket - Came Out of a Lady, Queen - Play the Game, Ezra Furman -
-    Tell Em All to Go to Hell, Baths - Yeoman, Donald Fagen - I.G.Y., Childish Gambino
-    -- Boogieman, Moses Sumney - Quarrel, Deca - Angel Butter, Ben Gibbard - The Concept,
-  Diarrhea Planet - Ghost With A Boner, Hop Along - Tibetan Pop Stars, 'Charles Fauna
-    - Hypnosis (Brothertiger Remix) ', Bibio - Light Up The Sky, Broken Social Scene
-    - Gonna Get Better, Majical Cloudz - Turns Turns Turns, Wells Fargo -- Coming
-    Home, LCD Soundstyem - You Can't Hide / Shame on You, John Grant - Snug Slacks]
-Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los Ageless,
-  Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor, Sugar', Soulwax- Masterplanned,
-  Zola Jesus - Exhumed, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR\
-    \ GUiTAR- Live", 'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep,
-  DJ Shadow - Horror Show, Protest the Hero - Caravan, Shamir - Straight Boy, Mutemath
-    - Prytania, Rapsody - Power, TRUTHR- Earth II, Kamasi Washington- Truth, London
-    Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4\
-    nger", Allie X- Paper Love, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
-Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
-    - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
-    Show, Unwound - Look A Ghost, Electro Group - Captain New Mexico]
-Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
+Alteq: [Moses Sumney - Quarrel, Flies Are Spies From Hell - Welcome Wolves, Bibio
+    - Light Up The Sky, Hop Along - Tibetan Pop Stars, Broken Social Scene - Gonna
+    Get Better, Baths - Yeoman, Matthew Good Band - Running for Home, Ollie MN - until
+    I see you again, Childish Gambino -- Boogieman, Ben Gibbard - The Concept, 'Charles
+    Fauna - Hypnosis (Brothertiger Remix) ', The Decemberists - On The Bus Mall, Queen
+    - Play the Game, John Grant - Snug Slacks, Donald Fagen - I.G.Y., Spoon - Inside
+    Out, Deca - Angel Butter, LCD Soundstyem - You Can't Hide / Shame on You, Rubblebucket
+    - Came Out of a Lady, Diarrhea Planet - Ghost With A Boner, The Mountain Goats
+    -- Amy aka Spent Gladiator 1, Wells Fargo -- Coming Home, World/Inferno Friendship
+    Society - Cats Are Not Lucky Creatures, Ezra Furman - Tell Em All to Go to Hell,
+  Majical Cloudz - Turns Turns Turns]
+Amdusias: [Protest the Hero - Caravan, Frou Frou- Flicks, Kamasi Washington- Truth,
+  TRUTHR- Earth II, London Grammar- Non Believer, 'Oathbreaker- 10:56 / Second Son
+    of R.', Paramore- Rose-colored Boy, Meshuggah - I, DJ Shadow - Horror Show, Mutemath
+    - Prytania, Soulwax- Masterplanned, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9",
+  Meniscus- Doom, clipping. - The Deep, Bent Knee- Terror Bird, Shamir - Straight
+    Boy, Pryapisme - Totipotence D'un Erg, Zola Jesus - Exhumed, Rapsody - Power,
+  St. Vincent - Los Ageless, Allie X- Paper Love, 'The Library- You Don''t Need No
+    Doctor, Sugar', "\u2605STAR GUiTAR- Live", Phoebe Bridgers- Funeral, "Archspire-\
+    \ Involuntary Doppelg\xE4nger"]
+Duster: [Strange Ranger - House Show, Electro Group - Captain New Mexico, Spare Snare
+    - As a Matter of Fact, Swirlies - One Light Flashing I Love You, Unwound - Look
+    A Ghost, Kincaid - Parachute, Women - Group Transport Hall]
+Klyvert: [Galaxie 500 - Tugboat, The Waterboys - This Is The Sea]
 Knacker: ['Michael Geyre, Shinichi Sakamoto - Monster-Town']
-Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn of
-    Midi - Dysnomia, Jamie xx - Just Saying, Godspeed You! Black Emperor - Rockets
-    Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, Muse
-    - Map of the Problematique, Matthew Good - Running For Home, Mogwai - Crossing
-    the Road Material, "Dave Brubeck - Blue Rondo \xE0 la Turk", Boards of Canada
-    - nlogax, Fleet Foxes - Mykonos, Solange - Left Side Drive, Royksopp - Boys, Beach
-    House - The Hours, The Books - Smells Like Content, Stravinsky - The National
-    Anthem, Shpongle - Falling Awake, Doves - The Man Who Sold Everything, My Bloody
-    Valentine - I only said, They Move On Tracks of Neverending Light, David Bowie
-    - Modern Love, Dengue Fever - Sni Bong, Magnus Palsson - Pressure Cooker, Boards
-    of Canada - Turquoise Hexagon Sun]
-Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
-    - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
-    Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
-    Radio', Lesley Gore - It's My Party, Adore Delano - Negative Nancy, Kesha - Finding
-    You, Nick Drake - Things Behind the Sun, Cyndi Lauper - When You Were Mine, Celine
-    Neon - Lengua, Magik\*Magik - Front of the Line, 'Marvin Gaye, Studio Rio - Sexual
-    Healing', Sufjan Stevens - Tonya Harding (In D major), Fire Inc. - Nowhere Fast,
-  Darren Hayes - A Conversation With God]
-Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Counterpoint\
-    \ III. Fast - RYXP True To Original Edit", Zammuto - It Can Feel So Good, Esperanza
-    Spalding - Good Lava, Everything Everything - Cough Cough, "R\xF6yksopp and Robyn\
-    \ - Sayit", Singularity - Print, Leonard Bernstein - Symphony 3 "Kaddish", Stravinsky
-    - Le Rossignol prelude, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we
-    rock together', Nujabes - Luv (Sic), Shpongle - Room 23, Godspeed You! Black Emperor
-    - rockets fall on Rocket Falls, Johannes Brahms - String Sextet No. 2 Mvt I, Truxton
-    - Automation Astrosmash, Django Django - Found You, Shawn Wasabi - Otter Pop,
-  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore, This
-    Will Destroy You - Little Smoke, Vitas - Opera 2, XTC - Complicated Game, Worriers
-    - They/Them/Theirs]
+Lorxus: [Solange - Left Side Drive, Godspeed You! Black Emperor - Rockets Fall on
+    Rocket Falls, Doves - The Man Who Sold Everything, Stravinsky - The National Anthem,
+  My Bloody Valentine - I only said, "Dave Brubeck - Blue Rondo \xE0 la Turk", 'This
+    Will Destroy You - Killed The Lord, Left For the New World', Rodgers and Hammerstein/Yul
+    Brynner - Puzzlement, Fleet Foxes - Mykonos, Beach House - The Hours, Shpongle
+    - Falling Awake, Foxhole - A Children's Canto, Matthew Good - Running For Home,
+  Boards of Canada - Turquoise Hexagon Sun, Boards of Canada - nlogax, Dawn of Midi
+    - Dysnomia, Royksopp - Boys, Magnus Palsson - Pressure Cooker, Muse - Map of the
+    Problematique, The Books - Smells Like Content, Jamie xx - Just Saying, Dengue
+    Fever - Sni Bong, Sky Ferreira - Werewolf, Mogwai - Crossing the Road Material,
+  They Move On Tracks of Neverending Light, David Bowie - Modern Love]
+Lu: [CHVRCHES - Call It Off, Celine Neon - Lengua, Cyndi Lauper - When You Were Mine,
+  Magik\*Magik - Front of the Line, 'Neil Patrick Harris, Hedwig and the Angry Inch
+    Cast - Midnight Radio', Basement Jaxx vs. Metropole Orkest - Good Luck, Dessa
+    - Fire Drills, Adore Delano - Negative Nancy, Kesha - Finding You, BATHS - Broadback,
+  The Beaches - Little Pieces, Darren Hayes - A Conversation With God, Lesley Gore
+    - It's My Party, Nick Drake - Things Behind the Sun, Stars - Fluorescent Lights,
+  Fire Inc. - Nowhere Fast, Yeasayer - Divine Simulacrum, 'Marvin Gaye, Studio Rio
+    - Sexual Healing', Sufjan Stevens - Tonya Harding (In D major)]
+Makyo: [Godspeed You! Black Emperor - rockets fall on Rocket Falls, Esperanza Spalding
+    - Good Lava, Tan Dun - Ghost Opera, Shawn Wasabi - Otter Pop, Hiatus Kaiyote -
+    Mobius Streak, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we rock together',
+  Todd Reynolds/Nick Zammuto - Fast Pasture, Samuel Barber - Excursions No. 1 Un poco
+    allegro, Shpongle - Room 23, Truxton - Automation Astrosmash, "R\xF6yksopp and\
+    \ Robyn - Sayit", Leonard Bernstein - Symphony 3 "Kaddish", Worriers - They/Them/Theirs,
+  Nujabes - Luv (Sic), "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True\
+    \ To Original Edit", Johannes Brahms - String Sextet No. 2 Mvt I, XTC - Complicated
+    Game, Singularity - Print, Django Django - Found You, Zammuto - It Can Feel So
+    Good, Vitas - Opera 2, Everything Everything - Cough Cough, Stravinsky - Le Rossignol
+    prelude, Caspian - Sycamore, This Will Destroy You - Little Smoke]
 Mando: [Negrita - Rotolando Verso Sud]
-Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Busdriver - Imaginary Places,
-  Hrishikesh Hirway - Song Exploder, Louis Cole - Weird Part of the Night, Ihsahn
-    - Between the Eagle and the Snake, Moldover - Young One, Phideaux - Microdeath
-    Softstar, That Handsome Devil - Elephant Bones, 'The Pine Box Boys - Will You
-    Remember Me?', Diablo Swing Orchestra - Lady Clandestine Chainbreaker, Hanggai
-    - Back to You]
-Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa -
-    Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Deerhoof - I Will Spite
-    Survive (feat. Jenn Wasner), Sote - Plural, Fiona Apple - Fast As You Can, "Bj\xF6\
-    rk - Pluto", Yuragi - night is young, Mykki Blanco - The Plug Won't, The World
-    Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Nonsens & TREKKIE
-    TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling,
-  Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga", Baths - Adam Copies, Kelela
-    - Onanon, Pedestrian Deposit - You Didn't Break Me, The Body & Full Of Hell -
-    Earth Is A Cage, Remo-con - Vermillion, Angel Olsen - Shut Up Kiss Me, Brockhampton
-    - JUNKY, Sidewalks and Skeletons - The Void]
+Peri: [Ihsahn - Between the Eagle and the Snake, 'The Pine Box Boys - Will You Remember
+    Me?', That Handsome Devil - Elephant Bones, Louis Cole - Weird Part of the Night,
+  Busdriver - Imaginary Places, Moldover - Young One, Dengue Fever - Sni Bong, Phideaux
+    - Microdeath Softstar, Frost* - Heartstrings, Hrishikesh Hirway - Song Exploder,
+  Diablo Swing Orchestra - Lady Clandestine Chainbreaker, Hanggai - Back to You]
+Proxy: [The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future,
+  Dessa - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020 - Baba Vanga", Pedestrian
+    Deposit - You Didn't Break Me, "Bj\xF6rk - Pluto", Clap Your Hands Say Yeah -
+    The Vanity Of Trying, Mykki Blanco - The Plug Won't, Carly Rae Jepsen - Cut To
+    The Feeling, Baths - Adam Copies, Bjork - Arisen My Senses, Sote - Plural, Sidewalks
+    and Skeletons - The Void, Yuragi - night is young, Iglooghost - White Gum, Nonsens
+    & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Brockhampton - JUNKY, Deerhoof
+    - I Will Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, 'Mitski - Goodbye,
+    My Danish Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com - NOW, Fiona
+    Apple - Fast As You Can, The Body & Full Of Hell - Earth Is A Cage, Remo-con -
+    Vermillion]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
-Veyote: ["Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
-    Her Right Back (feat. Dances With White Girls), Metrik - Hi!, Tchami - World To
-    Me (feat. Luke James), The Mary Nixons - Adrian]
+Veyote: [Tchami - World To Me (feat. Luke James), Chris Lake - Give Her Right Back
+    (feat. Dances With White Girls), Metrik - Hi!, "Above & Beyond - My Own Hymn (feat.\
+    \ Zo\xEB Johnston)", The Mary Nixons - Adrian]
