--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -5,22 +5,25 @@ Alteq: [Moses Sumney - Quarrel, Flies Are Spies From Hell - Welcome Wolves, Bibi
     Fauna - Hypnosis (Brothertiger Remix) ', The Decemberists - On The Bus Mall, Queen
     - Play the Game, John Grant - Snug Slacks, Donald Fagen - I.G.Y., Spoon - Inside
     Out, Deca - Angel Butter, LCD Soundstyem - You Can't Hide / Shame on You, Rubblebucket
-    - Came Out of a Lady, Diarrhea Planet - Ghost With A Boner, The Mountain Goats
-    -- Amy aka Spent Gladiator 1, Wells Fargo -- Coming Home, World/Inferno Friendship
-    Society - Cats Are Not Lucky Creatures, Ezra Furman - Tell Em All to Go to Hell,
-  Majical Cloudz - Turns Turns Turns]
+    - Came Out of a Lady, Diarrhea Planet - Ghost With A Boner, Moderat - Bad Kingdom,
+  The Mountain Goats -- Amy aka Spent Gladiator 1, Wells Fargo -- Coming Home, World/Inferno
+    Friendship Society - Cats Are Not Lucky Creatures, Ezra Furman - Tell Em All to
+    Go to Hell, Majical Cloudz - Turns Turns Turns]
 Amdusias: [Protest the Hero - Caravan, Frou Frou- Flicks, Kamasi Washington- Truth,
   TRUTHR- Earth II, London Grammar- Non Believer, 'Oathbreaker- 10:56 / Second Son
     of R.', Paramore- Rose-colored Boy, Meshuggah - I, DJ Shadow - Horror Show, Mutemath
     - Prytania, Soulwax- Masterplanned, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9",
   Meniscus- Doom, clipping. - The Deep, Bent Knee- Terror Bird, Shamir - Straight
     Boy, Pryapisme - Totipotence D'un Erg, Zola Jesus - Exhumed, Rapsody - Power,
-  St. Vincent - Los Ageless, Allie X- Paper Love, 'The Library- You Don''t Need No
-    Doctor, Sugar', "\u2605STAR GUiTAR- Live", Phoebe Bridgers- Funeral, "Archspire-\
-    \ Involuntary Doppelg\xE4nger"]
+  Hella- Biblical Violence, St. Vincent - Los Ageless, Allie X- Paper Love, 'The Library-
+    You Don''t Need No Doctor, Sugar', "\u2605STAR GUiTAR- Live", Phoebe Bridgers-
+    Funeral, "Archspire- Involuntary Doppelg\xE4nger"]
+Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Strange Ranger - House Show, Electro Group - Captain New Mexico, Spare Snare
     - As a Matter of Fact, Swirlies - One Light Flashing I Love You, Unwound - Look
     A Ghost, Kincaid - Parachute, Women - Group Transport Hall]
+Jasper: ['Phoenix Spreading It''s Wings, writen by Hu Tianchuan and Dong Hongde preformed
+    by the little giant Chinese Chamber Orchestra']
 Klyvert: [Galaxie 500 - Tugboat, The Waterboys - This Is The Sea]
 Knacker: ['Michael Geyre, Shinichi Sakamoto - Monster-Town']
 Lorxus: [Solange - Left Side Drive, Godspeed You! Black Emperor - Rockets Fall on
@@ -31,9 +34,10 @@ Lorxus: [Solange - Left Side Drive, Godspeed You! Black Emperor - Rockets Fall o
     - Falling Awake, Foxhole - A Children's Canto, Matthew Good - Running For Home,
   Boards of Canada - Turquoise Hexagon Sun, Boards of Canada - nlogax, Dawn of Midi
     - Dysnomia, Royksopp - Boys, Magnus Palsson - Pressure Cooker, Muse - Map of the
-    Problematique, The Books - Smells Like Content, Jamie xx - Just Saying, Dengue
-    Fever - Sni Bong, Sky Ferreira - Werewolf, Mogwai - Crossing the Road Material,
-  They Move On Tracks of Neverending Light, David Bowie - Modern Love]
+    Problematique, The Books - Smells Like Content, 'Peter, Paul, and Mary - A Soalin''',
+  Jamie xx - Just Saying, Dengue Fever - Sni Bong, Sky Ferreira - Werewolf, Mogwai
+    - Crossing the Road Material, They Move On Tracks of Neverending Light, David
+    Bowie - Modern Love]
 Lu: [CHVRCHES - Call It Off, Celine Neon - Lengua, Cyndi Lauper - When You Were Mine,
   Magik\*Magik - Front of the Line, 'Neil Patrick Harris, Hedwig and the Angry Inch
     Cast - Midnight Radio', Basement Jaxx vs. Metropole Orkest - Good Luck, Dessa
@@ -50,15 +54,17 @@ Makyo: [Godspeed You! Black Emperor - rockets fall on Rocket Falls, Esperanza Sp
     \ Robyn - Sayit", Leonard Bernstein - Symphony 3 "Kaddish", Worriers - They/Them/Theirs,
   Nujabes - Luv (Sic), "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True\
     \ To Original Edit", Johannes Brahms - String Sextet No. 2 Mvt I, XTC - Complicated
-    Game, Singularity - Print, Django Django - Found You, Zammuto - It Can Feel So
-    Good, Vitas - Opera 2, Everything Everything - Cough Cough, Stravinsky - Le Rossignol
-    prelude, Caspian - Sycamore, This Will Destroy You - Little Smoke]
+    Game, Singularity - Print, Django Django - Found You, Jean Sibelius -En etsi valtaa
+    loistoa, Zammuto - It Can Feel So Good, Vitas - Opera 2, Everything Everything
+    - Cough Cough, Stravinsky - Le Rossignol prelude, Caspian - Sycamore, This Will
+    Destroy You - Little Smoke]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Ihsahn - Between the Eagle and the Snake, 'The Pine Box Boys - Will You Remember
     Me?', That Handsome Devil - Elephant Bones, Louis Cole - Weird Part of the Night,
   Busdriver - Imaginary Places, Moldover - Young One, Dengue Fever - Sni Bong, Phideaux
-    - Microdeath Softstar, Frost* - Heartstrings, Hrishikesh Hirway - Song Exploder,
-  Diablo Swing Orchestra - Lady Clandestine Chainbreaker, Hanggai - Back to You]
+    - Microdeath Softstar, Darth Vegas - Gritos Dulces, Frost* - Heartstrings, Hrishikesh
+    Hirway - Song Exploder, Diablo Swing Orchestra - Lady Clandestine Chainbreaker,
+  Hanggai - Back to You]
 Proxy: [The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future,
   Dessa - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020 - Baba Vanga", Pedestrian
     Deposit - You Didn't Break Me, "Bj\xF6rk - Pluto", Clap Your Hands Say Yeah -
@@ -66,10 +72,10 @@ Proxy: [The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Futu
     The Feeling, Baths - Adam Copies, Bjork - Arisen My Senses, Sote - Plural, Sidewalks
     and Skeletons - The Void, Yuragi - night is young, Iglooghost - White Gum, Nonsens
     & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Brockhampton - JUNKY, Deerhoof
-    - I Will Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, 'Mitski - Goodbye,
-    My Danish Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com - NOW, Fiona
-    Apple - Fast As You Can, The Body & Full Of Hell - Earth Is A Cage, Remo-con -
-    Vermillion]
+    - I Will Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, SZA - Prom, 'Mitski
+    - Goodbye, My Danish Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com
+    - NOW, Fiona Apple - Fast As You Can, The Body & Full Of Hell - Earth Is A Cage,
+  Remo-con - Vermillion]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
