--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -7,8 +7,8 @@ Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, The Mountain G
   Ben Gibbard - The Concept, Ollie MN - until I see you again, Diarrhea Planet - Ghost
     With A Boner, Hop Along - Tibetan Pop Stars, 'Charles Fauna - Hypnosis (Brothertiger
     Remix) ', Bibio - Light Up The Sky, Broken Social Scene - Gonna Get Better, Majical
-    Cloudz - Turns Turns Turns, Wells Fargo -- Coming Home, LCD Soundstyem - You Can't
-    Hide / Shame on You, John Grant - Snug Slacks]
+    Cloudz - Turns Turns Turns, Wells Fargo -- Coming Home, Will Smith - Switch, LCD
+    Soundstyem - You Can't Hide / Shame on You, John Grant - Snug Slacks]
 Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los Ageless,
   Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor, Sugar', Soulwax- Masterplanned,
   Zola Jesus - Exhumed, Hella- Biblical Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\
@@ -17,7 +17,8 @@ Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los
   Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath - Prytania, Meshuggah -
     I, Rapsody - Power, TRUTHR- Earth II, Kamasi Washington- Truth, London Grammar-
     Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger",
-  Allie X- Paper Love, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
+  Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus-
+    Doom]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
@@ -36,8 +37,8 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn
     Brynner - Puzzlement, The Books - Smells Like Content, Stravinsky - The National
     Anthem, Shpongle - Falling Awake, Doves - The Man Who Sold Everything, My Bloody
     Valentine - I only said, They Move On Tracks of Neverending Light, David Bowie
-    - Modern Love, Dengue Fever - Sni Bong, Magnus Palsson - Pressure Cooker, Boards
-    of Canada - Turquoise Hexagon Sun]
+    - Modern Love, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung,
+  Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
