--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -26,19 +26,21 @@ Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincai
 Jasper: ['Phoenix Spreading It''s Wings, writen by Hu Tianchuan and Dong Hongde preformed
     by the little giant Chinese Chamber Orchestra']
 Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
-Knacker: ['Michael Geyre, Shinichi Sakamoto - Monster-Town']
+Knacker: [The Moody Blues - Legend of a Mind, 'Michael Geyre, Shinichi Sakamoto -
+    Monster-Town']
 Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn of
     Midi - Dysnomia, Jamie xx - Just Saying, Godspeed You! Black Emperor - Rockets
-    Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, Muse
-    - Map of the Problematique, 'Peter, Paul, and Mary - A Soalin''', Matthew Good
-    - Running For Home, Mogwai - Crossing the Road Material, "Dave Brubeck - Blue\
-    \ Rondo \xE0 la Turk", Boards of Canada - nlogax, Fleet Foxes - Mykonos, Solange
-    - Left Side Drive, Royksopp - Boys, Beach House - The Hours, Rodgers and Hammerstein/Yul
-    Brynner - Puzzlement, The Books - Smells Like Content, Stravinsky - The National
-    Anthem, Shpongle - Falling Awake, Doves - The Man Who Sold Everything, My Bloody
-    Valentine - I only said, They Move On Tracks of Neverending Light, David Bowie
-    - Modern Love, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung,
-  Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
+    Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, (The
+    Sound of Space-Filling Curves), Muse - Map of the Problematique, 'Peter, Paul,
+    and Mary - A Soalin''', Matthew Good - Running For Home, Mogwai - Crossing the
+    Road Material, "Dave Brubeck - Blue Rondo \xE0 la Turk", Boards of Canada - nlogax,
+  Fleet Foxes - Mykonos, Solange - Left Side Drive, Royksopp - Boys, Beach House -
+    The Hours, Rodgers and Hammerstein/Yul Brynner - Puzzlement, The Books - Smells
+    Like Content, Stravinsky - The National Anthem, Shpongle - Falling Awake, Doves
+    - The Man Who Sold Everything, My Bloody Valentine - I only said, They Move On
+    Tracks of Neverending Light, David Bowie - Modern Love, Dengue Fever - Sni Bong,
+  The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure Cooker,
+  Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
@@ -51,15 +53,16 @@ Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights,
 Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Counterpoint\
     \ III. Fast - RYXP True To Original Edit", Zammuto - It Can Feel So Good, Esperanza
     Spalding - Good Lava, Everything Everything - Cough Cough, "R\xF6yksopp and Robyn\
-    \ - Sayit", Singularity - Print, Jean Sibelius -En etsi valtaa loistoa, Leonard
-    Bernstein - Symphony 3 "Kaddish", Stravinsky - Le Rossignol prelude, 'Vulfpeck
-    ft. Antwaun Stanley - Birds of a feather, we rock together', Nujabes - Luv (Sic),
-  Shpongle - Room 23, Godspeed You! Black Emperor - rockets fall on Rocket Falls,
-  "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms - String Sextet No. 2 Mvt I,
-  Truxton - Automation Astrosmash, Samuel Barber - Excursions No. 1 Un poco allegro,
-  Django Django - Found You, Shawn Wasabi - Otter Pop, Tan Dun - Ghost Opera, Hiatus
-    Kaiyote - Mobius Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke,
-  Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+    \ - Sayit", Consider the Source - Closer to Home, Singularity - Print, Jean Sibelius
+    -En etsi valtaa loistoa, Leonard Bernstein - Symphony 3 "Kaddish", Stravinsky
+    - Le Rossignol prelude, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we
+    rock together', Nujabes - Luv (Sic), Shpongle - Room 23, Godspeed You! Black Emperor
+    - rockets fall on Rocket Falls, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms
+    - String Sextet No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber -
+    Excursions No. 1 Un poco allegro, Django Django - Found You, Shawn Wasabi - Otter
+    Pop, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore,
+  This Will Destroy You - Little Smoke, Vitas - Opera 2, XTC - Complicated Game, Worriers
+    - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulces,
   Busdriver - Imaginary Places, Hrishikesh Hirway - Song Exploder, Louis Cole - Weird
@@ -68,16 +71,16 @@ Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulc
     Pine Box Boys - Will You Remember Me?', Diablo Swing Orchestra - Lady Clandestine
     Chainbreaker, Hanggai - Back to You]
 Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa -
-    Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Deerhoof - I Will Spite
-    Survive (feat. Jenn Wasner), SZA - Prom, Sote - Plural, Fiona Apple - Fast As
-    You Can, "Bj\xF6rk - Pluto", Yuragi - night is young, Mykki Blanco - The Plug
-    Won't, The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future,
-  tUnE-yArDs - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko),
-  Carly Rae Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah - The Vanity Of
-    Trying, Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga", Baths - Adam Copies,
-  Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me, The Body & Full Of Hell
-    - Earth Is A Cage, Remo-con - Vermillion, Angel Olsen - Shut Up Kiss Me, Brockhampton
-    - JUNKY, Sidewalks and Skeletons - The Void]
+    Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Speedy Ortiz - Fun,
+  Deerhoof - I Will Spite Survive (feat. Jenn Wasner), SZA - Prom, Sote - Plural,
+  Fiona Apple - Fast As You Can, "Bj\xF6rk - Pluto", Yuragi - night is young, Mykki
+    Blanco - The Plug Won't, The World Is A Beautiful Place & I Am No Longer Afraid
+    To Die - The Future, tUnE-yArDs - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic
+    (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah
+    - The Vanity Of Trying, Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga",
+  Baths - Adam Copies, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me,
+  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Angel Olsen -
+    Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
