--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -17,8 +17,8 @@ Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los
   Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath - Prytania, Meshuggah -
     I, Rapsody - Power, TRUTHR- Earth II, Kamasi Washington- Truth, London Grammar-
     Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger",
-  Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus-
-    Doom]
+  Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence
+    D'un Erg, Meniscus- Doom]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
@@ -27,7 +27,7 @@ Jasper: ['Phoenix Spreading It''s Wings, writen by Hu Tianchuan and Dong Hongde 
     by the little giant Chinese Chamber Orchestra']
 Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
 Knacker: [The Moody Blues - Legend of a Mind, 'Michael Geyre, Shinichi Sakamoto -
-    Monster-Town']
+    Monster-Town', They Might Be Giants - When the Light Comes On]
 Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn of
     Midi - Dysnomia, Jamie xx - Just Saying, Godspeed You! Black Emperor - Rockets
     Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, (The
@@ -38,9 +38,9 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn
     The Hours, Rodgers and Hammerstein/Yul Brynner - Puzzlement, The Books - Smells
     Like Content, Stravinsky - The National Anthem, Shpongle - Falling Awake, Doves
     - The Man Who Sold Everything, My Bloody Valentine - I only said, They Move On
-    Tracks of Neverending Light, David Bowie - Modern Love, Dengue Fever - Sni Bong,
-  The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure Cooker,
-  Boards of Canada - Turquoise Hexagon Sun]
+    Tracks of Neverending Light, David Bowie - Modern Love, Ed Harrison - Annul, Dengue
+    Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson
+    - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
@@ -61,8 +61,8 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Count
     - String Sextet No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber -
     Excursions No. 1 Un poco allegro, Django Django - Found You, Shawn Wasabi - Otter
     Pop, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore,
-  This Will Destroy You - Little Smoke, Vitas - Opera 2, XTC - Complicated Game, Worriers
-    - They/Them/Theirs]
+  This Will Destroy You - Little Smoke, King Gizzard and the Lizard Wizard - Rattlesnake,
+  Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulces,
   Busdriver - Imaginary Places, Hrishikesh Hirway - Song Exploder, Louis Cole - Weird
@@ -79,8 +79,9 @@ Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa 
     (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah
     - The Vanity Of Trying, Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga",
   Baths - Adam Copies, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me,
-  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Angel Olsen -
-    Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The Void]
+  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary & Garlic
+    - Wintering, Angel Olsen - Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and
+    Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
