--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -36,13 +36,13 @@ Lorxus: [(The Sound of Space-Filling Curves), The Flaming Lips - Pompeii am Gott
     Will Destroy You - Killed The Lord, Left For the New World', Rodgers and Hammerstein/Yul
     Brynner - Puzzlement, Fleet Foxes - Mykonos, Beach House - The Hours, Shpongle
     - Falling Awake, Foxhole - A Children's Canto, Matthew Good - Running For Home,
-  Boards of Canada - Turquoise Hexagon Sun, Boards of Canada - nlogax, Dawn of Midi
-    - Dysnomia, Royksopp - Boys, Magnus Palsson - Pressure Cooker, This Will Destroy
-    You - They Move on Tracks of Never-Ending Light, Muse - Map of the Problematique,
-  The Books - Smells Like Content, 'Peter, Paul, and Mary - A Soalin''', Jamie xx
-    - Just Saying, Dengue Fever - Sni Bong, Sky Ferreira - Werewolf, Mogwai - Crossing
-    the Road Material, Ed Harrison - Annul, They Move On Tracks of Neverending Light,
-  David Bowie - Modern Love]
+  Boards of Canada - Turquoise Hexagon Sun, Broken Social Scene - 7/4 (Shoreline),
+  Boards of Canada - nlogax, Dawn of Midi - Dysnomia, Royksopp - Boys, Magnus Palsson
+    - Pressure Cooker, This Will Destroy You - They Move on Tracks of Never-Ending
+    Light, Muse - Map of the Problematique, The Books - Smells Like Content, 'Peter,
+    Paul, and Mary - A Soalin''', Jamie xx - Just Saying, Dengue Fever - Sni Bong,
+  Sky Ferreira - Werewolf, Mogwai - Crossing the Road Material, Ed Harrison - Annul,
+  They Move On Tracks of Neverending Light, David Bowie - Modern Love]
 Lu: [CHVRCHES - Call It Off, Celine Neon - Lengua, Cyndi Lauper - When You Were Mine,
   Magik\*Magik - Front of the Line, 'Neil Patrick Harris, Hedwig and the Angry Inch
     Cast - Midnight Radio', Basement Jaxx vs. Metropole Orkest - Good Luck, Dessa
@@ -58,33 +58,33 @@ Makyo: [Consider the Source - Closer to Home, Godspeed You! Black Emperor - rock
     - Birds of a feather, we rock together', Todd Reynolds/Nick Zammuto - Fast Pasture,
   Samuel Barber - Excursions No. 1 Un poco allegro, Shpongle - Room 23, Truxton -
     Automation Astrosmash, "R\xF6yksopp and Robyn - Sayit", Leonard Bernstein - Symphony
-    3 "Kaddish", Worriers - They/Them/Theirs, Nujabes - Luv (Sic), "R\xF6yksopp -\
-    \ Electric Counterpoint III. Fast - RYXP True To Original Edit", Johannes Brahms
-    - String Sextet No. 2 Mvt I, XTC - Complicated Game, Magic City Hippies - Hush,
-  Singularity - Print, Django Django - Found You, Jean Sibelius -En etsi valtaa loistoa,
-  "REOL - \u5BB5\u3005\u53E4\u4ECA", Zammuto - It Can Feel So Good, Vitas - Opera
-    2, Everything Everything - Cough Cough, Stravinsky - Le Rossignol prelude, King
-    Gizzard and the Lizard Wizard - Rattlesnake, Caspian - Sycamore, This Will Destroy
-    You - Little Smoke]
+    3 "Kaddish", Worriers - They/Them/Theirs, Amon Tobin - Nightlife, Nujabes - Luv
+    (Sic), "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True To Original\
+    \ Edit", Johannes Brahms - String Sextet No. 2 Mvt I, XTC - Complicated Game,
+  Magic City Hippies - Hush, Singularity - Print, Django Django - Found You, Jean
+    Sibelius -En etsi valtaa loistoa, "REOL - \u5BB5\u3005\u53E4\u4ECA", Zammuto -
+    It Can Feel So Good, Vitas - Opera 2, Everything Everything - Cough Cough, Stravinsky
+    - Le Rossignol prelude, King Gizzard and the Lizard Wizard - Rattlesnake, Caspian
+    - Sycamore, This Will Destroy You - Little Smoke]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Ihsahn - Between the Eagle and the Snake, 'The Pine Box Boys - Will You Remember
     Me?', That Handsome Devil - Elephant Bones, Louis Cole - Weird Part of the Night,
-  Busdriver - Imaginary Places, Moldover - Young One, Dengue Fever - Sni Bong, Phideaux
-    - Microdeath Softstar, Darth Vegas - Gritos Dulces, Frost* - Heartstrings, Hrishikesh
-    Hirway - Song Exploder, Diablo Swing Orchestra - Lady Clandestine Chainbreaker,
-  Hanggai - Back to You]
+  Busdriver - Imaginary Places, Disasterpeace - The Midnight Wood, Moldover - Young
+    One, Dengue Fever - Sni Bong, Phideaux - Microdeath Softstar, Darth Vegas - Gritos
+    Dulces, Frost* - Heartstrings, Hrishikesh Hirway - Song Exploder, Diablo Swing
+    Orchestra - Lady Clandestine Chainbreaker, Hanggai - Back to You]
 Proxy: [Speedy Ortiz - Fun, The World Is A Beautiful Place & I Am No Longer Afraid
     To Die - The Future, Dessa - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020\
     \ - Baba Vanga", Pedestrian Deposit - You Didn't Break Me, "Bj\xF6rk - Pluto",
   Clap Your Hands Say Yeah - The Vanity Of Trying, Mykki Blanco - The Plug Won't,
   Carly Rae Jepsen - Cut To The Feeling, Baths - Adam Copies, Bjork - Arisen My Senses,
-  Sote - Plural, Sidewalks and Skeletons - The Void, Yuragi - night is young, Iglooghost
-    - White Gum, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Brockhampton
-    - JUNKY, Closer - Gift Shop, Deerhoof - I Will Spite Survive (feat. Jenn Wasner),
-  Yaeji - Last Breath, SZA - Prom, tUnE-yArDs - ABC 123, 'Mitski - Goodbye, My Danish
-    Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com - NOW, Fiona Apple -
-    Fast As You Can, Rosemary & Garlic - Wintering, The Body & Full Of Hell - Earth
-    Is A Cage, Remo-con - Vermillion]
+  Sote - Plural, Sidewalks and Skeletons - The Void, Dan Deacon - Learning To Relax,
+  Yuragi - night is young, Iglooghost - White Gum, Nonsens & TREKKIE TRAX CREW - Ballistic
+    (feat. Ashnikko), Brockhampton - JUNKY, Closer - Gift Shop, Deerhoof - I Will
+    Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, SZA - Prom, tUnE-yArDs
+    - ABC 123, 'Mitski - Goodbye, My Danish Sweetheart', Angel Olsen - Shut Up Kiss
+    Me, Charisma.com - NOW, Fiona Apple - Fast As You Can, Rosemary & Garlic - Wintering,
+  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
