--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -15,10 +15,10 @@ Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los
     \u30F3\u30B9", "\u2605STAR GUiTAR- Live", 'Oathbreaker- 10:56 / Second Son of
     R.', clipping. - The Deep, Hookworms- Ullswater, DJ Shadow - Horror Show, Protest
     the Hero - Caravan, Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath -
-    Prytania, Meshuggah - I, Rapsody - Power, TRUTHR- Earth II, Kamasi Washington-
-    Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary\
-    \ Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan,
-  Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
+    Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth
+    II, Kamasi Washington- Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral,
+  "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love,
+  Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
@@ -37,12 +37,12 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn
   'Saxon Shore - Secret Fire, Blinding Light', Fleet Foxes - Mykonos, Solange - Left
     Side Drive, This Will Destroy You - They Move on Tracks of Never-Ending Light,
   Royksopp - Boys, Beach House - The Hours, Rodgers and Hammerstein/Yul Brynner -
-    Puzzlement, The Books - Smells Like Content, Stravinsky - The National Anthem,
-  Broken Social Scene - 7/4 (Shoreline), Shpongle - Falling Awake, Doves - The Man
-    Who Sold Everything, My Bloody Valentine - I only said, They Move On Tracks of
-    Neverending Light, David Bowie - Modern Love, Ed Harrison - Annul, Dengue Fever
-    - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure
-    Cooker, Boards of Canada - Turquoise Hexagon Sun]
+    Puzzlement, The Books - Smells Like Content, David Bergeaud - Scaling the Cliffs,
+  Stravinsky - The National Anthem, Broken Social Scene - 7/4 (Shoreline), Shpongle
+    - Falling Awake, Doves - The Man Who Sold Everything, My Bloody Valentine - I
+    only said, They Move On Tracks of Neverending Light, David Bowie - Modern Love,
+  Ed Harrison - Annul, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung,
+  Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
@@ -62,10 +62,11 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Count
     - Room 23, Godspeed You! Black Emperor - rockets fall on Rocket Falls, Magic City
     Hippies - Hush, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms - String Sextet
     No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber - Excursions No. 1
-    Un poco allegro, Django Django - Found You, Shawn Wasabi - Otter Pop, Amon Tobin
-    - Nightlife, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian -
-    Sycamore, This Will Destroy You - Little Smoke, King Gizzard and the Lizard Wizard
-    - Rattlesnake, Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+    Un poco allegro, Django Django - Found You, Milo - Landscaping, Shawn Wasabi -
+    Otter Pop, Amon Tobin - Nightlife, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius
+    Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke, King Gizzard
+    and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated Game,
+  Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulces,
   Busdriver - Imaginary Places, Hrishikesh Hirway - Song Exploder, Louis Cole - Weird
@@ -81,11 +82,11 @@ Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa 
     Place & I Am No Longer Afraid To Die - The Future, Closer - Gift Shop, tUnE-yArDs
     - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae
     Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah - The Vanity Of Trying,
-  Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga", Dan Deacon - Learning To
-    Relax, Baths - Adam Copies, Kelela - Onanon, Pedestrian Deposit - You Didn't Break
-    Me, The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary
-    & Garlic - Wintering, Angel Olsen - Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks
-    and Skeletons - The Void]
+  Yaeji - Last Breath, Hop Along - How Simple, "\u2020\u2021\u2020 - Baba Vanga",
+  Dan Deacon - Learning To Relax, Baths - Adam Copies, Kelela - Onanon, Pedestrian
+    Deposit - You Didn't Break Me, The Body & Full Of Hell - Earth Is A Cage, Remo-con
+    - Vermillion, Rosemary & Garlic - Wintering, Angel Olsen - Shut Up Kiss Me, Brockhampton
+    - JUNKY, Sidewalks and Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
