--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -12,13 +12,14 @@ Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, The Mountain G
 Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los Ageless,
   Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor, Sugar', Soulwax- Masterplanned,
   Zola Jesus - Exhumed, Hella- Biblical Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\
-    \u30F3\u30B9", "\u2605STAR GUiTAR- Live", 'Oathbreaker- 10:56 / Second Son of
-    R.', clipping. - The Deep, Hookworms- Ullswater, DJ Shadow - Horror Show, Protest
-    the Hero - Caravan, Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath -
-    Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth
-    II, Kamasi Washington- Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral,
-  "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love,
-  Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
+    \u30F3\u30B9", "\u2605STAR GUiTAR- Live", Alva Noto & Ryuichi Sakamoto- Glass,
+  'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep, Hookworms- Ullswater,
+  DJ Shadow - Horror Show, Protest the Hero - Caravan, Sorority Noise- No Halo, Shamir
+    - Straight Boy, Mutemath - Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue-
+    Empathy, TRUTHR- Earth II, Kamasi Washington- Truth, London Grammar- Non Believer,
+  Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust
+    on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence
+    D'un Erg, Meniscus- Doom]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
@@ -33,16 +34,17 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn
     Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, (The
     Sound of Space-Filling Curves), Muse - Map of the Problematique, 'Peter, Paul,
     and Mary - A Soalin''', Matthew Good - Running For Home, Mogwai - Crossing the
-    Road Material, "Dave Brubeck - Blue Rondo \xE0 la Turk", Boards of Canada - nlogax,
-  'Saxon Shore - Secret Fire, Blinding Light', Fleet Foxes - Mykonos, Solange - Left
-    Side Drive, This Will Destroy You - They Move on Tracks of Never-Ending Light,
-  Royksopp - Boys, Beach House - The Hours, Rodgers and Hammerstein/Yul Brynner -
-    Puzzlement, The Books - Smells Like Content, David Bergeaud - Scaling the Cliffs,
-  Stravinsky - The National Anthem, Broken Social Scene - 7/4 (Shoreline), Shpongle
-    - Falling Awake, Doves - The Man Who Sold Everything, My Bloody Valentine - I
-    only said, They Move On Tracks of Neverending Light, David Bowie - Modern Love,
-  Ed Harrison - Annul, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung,
-  Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
+    Road Material, Bob Dorough - Hey Little Twelve Toes, "Dave Brubeck - Blue Rondo\
+    \ \xE0 la Turk", Boards of Canada - nlogax, 'Saxon Shore - Secret Fire, Blinding
+    Light', Fleet Foxes - Mykonos, Solange - Left Side Drive, This Will Destroy You
+    - They Move on Tracks of Never-Ending Light, Royksopp - Boys, Beach House - The
+    Hours, Rodgers and Hammerstein/Yul Brynner - Puzzlement, The Books - Smells Like
+    Content, David Bergeaud - Scaling the Cliffs, Stravinsky - The National Anthem,
+  Broken Social Scene - 7/4 (Shoreline), Shpongle - Falling Awake, Doves - The Man
+    Who Sold Everything, My Bloody Valentine - I only said, They Move On Tracks of
+    Neverending Light, David Bowie - Modern Love, Ed Harrison - Annul, Dengue Fever
+    - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure
+    Cooker, Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
@@ -52,21 +54,22 @@ Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights,
     - Front of the Line, 'Marvin Gaye, Studio Rio - Sexual Healing', Sufjan Stevens
     - Tonya Harding (In D major), Fire Inc. - Nowhere Fast, Darren Hayes - A Conversation
     With God]
+Lunostophiles: [Dessa - Half of You]
 Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Counterpoint\
     \ III. Fast - RYXP True To Original Edit", Zammuto - It Can Feel So Good, Esperanza
     Spalding - Good Lava, Everything Everything - Cough Cough, "R\xF6yksopp and Robyn\
     \ - Sayit", Consider the Source - Closer to Home, Singularity - Print, Jean Sibelius
     -En etsi valtaa loistoa, Leonard Bernstein - Symphony 3 "Kaddish", Stravinsky
-    - Le Rossignol prelude, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we
-    rock together', Nujabes - Luv (Sic), Ezra Furman - Driving Down to LA, Shpongle
-    - Room 23, Godspeed You! Black Emperor - rockets fall on Rocket Falls, Magic City
-    Hippies - Hush, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms - String Sextet
-    No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber - Excursions No. 1
-    Un poco allegro, Django Django - Found You, Milo - Landscaping, Shawn Wasabi -
-    Otter Pop, Amon Tobin - Nightlife, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius
-    Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke, King Gizzard
-    and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated Game,
-  Worriers - They/Them/Theirs]
+    - Le Rossignol prelude, Vernon Jane - Fuck Me, 'Vulfpeck ft. Antwaun Stanley -
+    Birds of a feather, we rock together', Nujabes - Luv (Sic), Ezra Furman - Driving
+    Down to LA, Shpongle - Room 23, Godspeed You! Black Emperor - rockets fall on
+    Rocket Falls, Magic City Hippies - Hush, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes
+    Brahms - String Sextet No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber
+    - Excursions No. 1 Un poco allegro, Django Django - Found You, Milo - Landscaping,
+  Shawn Wasabi - Otter Pop, Amon Tobin - Nightlife, Tan Dun - Ghost Opera, Hiatus
+    Kaiyote - Mobius Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke,
+  King Gizzard and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated
+    Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulces,
   Busdriver - Imaginary Places, Hrishikesh Hirway - Song Exploder, Louis Cole - Weird
@@ -77,20 +80,20 @@ Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulc
 Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa -
     Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Speedy Ortiz - Fun,
   Deerhoof - I Will Spite Survive (feat. Jenn Wasner), SZA - Prom, Sote - Plural,
-  Fiona Apple - Fast As You Can, "Bj\xF6rk - Pluto", Yuragi - night is young, Yasutaka
-    Nakata - Give You More, Mykki Blanco - The Plug Won't, The World Is A Beautiful
-    Place & I Am No Longer Afraid To Die - The Future, Closer - Gift Shop, tUnE-yArDs
-    - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae
-    Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah - The Vanity Of Trying,
-  Yaeji - Last Breath, Hop Along - How Simple, "\u2020\u2021\u2020 - Baba Vanga",
-  Dan Deacon - Learning To Relax, Baths - Adam Copies, Kelela - Onanon, Pedestrian
-    Deposit - You Didn't Break Me, The Body & Full Of Hell - Earth Is A Cage, Remo-con
-    - Vermillion, Rosemary & Garlic - Wintering, Angel Olsen - Shut Up Kiss Me, Brockhampton
-    - JUNKY, Sidewalks and Skeletons - The Void]
+  Fiona Apple - Fast As You Can, FKA twigs - Glass & Patron, "Bj\xF6rk - Pluto", Yuragi
+    - night is young, Yasutaka Nakata - Give You More, Mykki Blanco - The Plug Won't,
+  The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Closer
+    - Gift Shop, tUnE-yArDs - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat.
+    Ashnikko), Carly Rae Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah - The
+    Vanity Of Trying, Yaeji - Last Breath, Hop Along - How Simple, "\u2020\u2021\u2020\
+    \ - Baba Vanga", Dan Deacon - Learning To Relax, Baths - Adam Copies, Kelela -
+    Onanon, Pedestrian Deposit - You Didn't Break Me, The Body & Full Of Hell - Earth
+    Is A Cage, Remo-con - Vermillion, Rosemary & Garlic - Wintering, Angel Olsen -
+    Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
-Traedon: [Ayreon - Computer Eyes]
+Traedon: [The Verve Pipe - Medicate Myself, Ayreon - Computer Eyes]
 Veyote: ["Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
     Her Right Back (feat. Dances With White Girls), Metrik - Hi!, Tchami - World To
     Me (feat. Luke James), The Mary Nixons - Adrian]
