--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -1,25 +1,26 @@
-Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, The Mountain Goats
-    -- Amy aka Spent Gladiator 1, Flies Are Spies From Hell - Welcome Wolves, World/Inferno
-    Friendship Society - Cats Are Not Lucky Creatures, The Decemberists - On The Bus
-    Mall, Rubblebucket - Came Out of a Lady, Moderat - Bad Kingdom, Queen - Play the
-    Game, Ezra Furman - Tell Em All to Go to Hell, Baths - Yeoman, Donald Fagen -
-    I.G.Y., Childish Gambino -- Boogieman, Moses Sumney - Quarrel, Deca - Angel Butter,
-  Ben Gibbard - The Concept, Ollie MN - until I see you again, Diarrhea Planet - Ghost
-    With A Boner, Hop Along - Tibetan Pop Stars, 'Charles Fauna - Hypnosis (Brothertiger
-    Remix) ', Bibio - Light Up The Sky, Broken Social Scene - Gonna Get Better, Majical
-    Cloudz - Turns Turns Turns, Wells Fargo -- Coming Home, Will Smith - Switch, LCD
-    Soundstyem - You Can't Hide / Shame on You, John Grant - Snug Slacks]
-Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los Ageless,
-  Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor, Sugar', Soulwax- Masterplanned,
-  Zola Jesus - Exhumed, Hella- Biblical Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\
-    \u30F3\u30B9", "\u2605STAR GUiTAR- Live", Alva Noto & Ryuichi Sakamoto- Glass,
-  'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep, Hookworms- Ullswater,
-  DJ Shadow - Horror Show, Protest the Hero - Caravan, Sorority Noise- No Halo, Shamir
-    - Straight Boy, Mutemath - Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue-
-    Empathy, TRUTHR- Earth II, Kamasi Washington- Truth, London Grammar- Non Believer,
-  Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust
-    on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence
-    D'un Erg, Meniscus- Doom]
+Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, Radiohead - Weird
+    Fishes/Arpeggi, The Mountain Goats -- Amy aka Spent Gladiator 1, Flies Are Spies
+    From Hell - Welcome Wolves, World/Inferno Friendship Society - Cats Are Not Lucky
+    Creatures, The Decemberists - On The Bus Mall, Rubblebucket - Came Out of a Lady,
+  Moderat - Bad Kingdom, Queen - Play the Game, Ezra Furman - Tell Em All to Go to
+    Hell, Baths - Yeoman, Donald Fagen - I.G.Y., Childish Gambino -- Boogieman, Moses
+    Sumney - Quarrel, Deca - Angel Butter, Ben Gibbard - The Concept, Ollie MN - until
+    I see you again, Diarrhea Planet - Ghost With A Boner, Hop Along - Tibetan Pop
+    Stars, 'Charles Fauna - Hypnosis (Brothertiger Remix) ', Bibio - Light Up The
+    Sky, Broken Social Scene - Gonna Get Better, Majical Cloudz - Turns Turns Turns,
+  Wells Fargo -- Coming Home, Will Smith - Switch, LCD Soundstyem - You Can't Hide
+    / Shame on You, John Grant - Snug Slacks]
+Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, Kero Kero Bonito- Only
+    Acting, St. Vincent - Los Ageless, Frou Frou- Flicks, 'The Library- You Don''t
+    Need No Doctor, Sugar', Soulwax- Masterplanned, Zola Jesus - Exhumed, Hella- Biblical
+    Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR GUiTAR-\
+    \ Live", Alva Noto & Ryuichi Sakamoto- Glass, 'Oathbreaker- 10:56 / Second Son
+    of R.', clipping. - The Deep, Hookworms- Ullswater, DJ Shadow - Horror Show, Protest
+    the Hero - Caravan, Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath -
+    Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth
+    II, Kamasi Washington- Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral,
+  "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love,
+  Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
@@ -30,21 +31,21 @@ Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
 Knacker: [The Moody Blues - Legend of a Mind, 'Michael Geyre, Shinichi Sakamoto -
     Monster-Town', They Might Be Giants - When the Light Comes On]
 Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn of
-    Midi - Dysnomia, Jamie xx - Just Saying, Godspeed You! Black Emperor - Rockets
-    Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, (The
-    Sound of Space-Filling Curves), Muse - Map of the Problematique, 'Peter, Paul,
-    and Mary - A Soalin''', Matthew Good - Running For Home, Mogwai - Crossing the
-    Road Material, Bob Dorough - Hey Little Twelve Toes, "Dave Brubeck - Blue Rondo\
-    \ \xE0 la Turk", Boards of Canada - nlogax, 'Saxon Shore - Secret Fire, Blinding
-    Light', Fleet Foxes - Mykonos, Solange - Left Side Drive, This Will Destroy You
-    - They Move on Tracks of Never-Ending Light, Royksopp - Boys, Beach House - The
-    Hours, Rodgers and Hammerstein/Yul Brynner - Puzzlement, The Books - Smells Like
-    Content, David Bergeaud - Scaling the Cliffs, Stravinsky - The National Anthem,
-  Broken Social Scene - 7/4 (Shoreline), Shpongle - Falling Awake, Doves - The Man
-    Who Sold Everything, My Bloody Valentine - I only said, They Move On Tracks of
-    Neverending Light, David Bowie - Modern Love, Ed Harrison - Annul, Dengue Fever
-    - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure
-    Cooker, Boards of Canada - Turquoise Hexagon Sun]
+    Midi - Dysnomia, (Looking for a Hard Headed Woman) - Cat Stevens, Jamie xx - Just
+    Saying, Godspeed You! Black Emperor - Rockets Fall on Rocket Falls, Sky Ferreira
+    - Werewolf, Foxhole - A Children's Canto, (The Sound of Space-Filling Curves),
+  Muse - Map of the Problematique, 'Peter, Paul, and Mary - A Soalin''', Matthew Good
+    - Running For Home, Mogwai - Crossing the Road Material, Bob Dorough - Hey Little
+    Twelve Toes, "Dave Brubeck - Blue Rondo \xE0 la Turk", Boards of Canada - nlogax,
+  'Saxon Shore - Secret Fire, Blinding Light', Fleet Foxes - Mykonos, Solange - Left
+    Side Drive, This Will Destroy You - They Move on Tracks of Never-Ending Light,
+  Royksopp - Boys, Beach House - The Hours, Rodgers and Hammerstein/Yul Brynner -
+    Puzzlement, The Books - Smells Like Content, David Bergeaud - Scaling the Cliffs,
+  Stravinsky - The National Anthem, Broken Social Scene - 7/4 (Shoreline), Shpongle
+    - Falling Awake, Doves - The Man Who Sold Everything, My Bloody Valentine - I
+    only said, They Move On Tracks of Neverending Light, David Bowie - Modern Love,
+  Ed Harrison - Annul, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung,
+  Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
@@ -71,15 +72,16 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Count
   King Gizzard and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated
     Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
-Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth Vegas - Gritos Dulces,
-  Busdriver - Imaginary Places, Hrishikesh Hirway - Song Exploder, Louis Cole - Weird
-    Part of the Night, Ihsahn - Between the Eagle and the Snake, Moldover - Young
-    One, Phideaux - Microdeath Softstar, That Handsome Devil - Elephant Bones, Disasterpeace
-    - The Midnight Wood, 'The Pine Box Boys - Will You Remember Me?', Diablo Swing
-    Orchestra - Lady Clandestine Chainbreaker, Hanggai - Back to You]
-Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa -
-    Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Speedy Ortiz - Fun,
-  Deerhoof - I Will Spite Survive (feat. Jenn Wasner), SZA - Prom, Sote - Plural,
+Peri: [Miss Eaves - Single A.F., Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth
+    Vegas - Gritos Dulces, Busdriver - Imaginary Places, Hrishikesh Hirway - Song
+    Exploder, Louis Cole - Weird Part of the Night, Ihsahn - Between the Eagle and
+    the Snake, Moldover - Young One, Phideaux - Microdeath Softstar, That Handsome
+    Devil - Elephant Bones, Disasterpeace - The Midnight Wood, 'The Pine Box Boys
+    - Will You Remember Me?', Diablo Swing Orchestra - Lady Clandestine Chainbreaker,
+  Hanggai - Back to You]
+Proxy: [Iglooghost - White Gum, Ratboys - GL, 'Mitski - Goodbye, My Danish Sweetheart',
+  Dessa - Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Speedy Ortiz -
+    Fun, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), SZA - Prom, Sote - Plural,
   Fiona Apple - Fast As You Can, FKA twigs - Glass & Patron, "Bj\xF6rk - Pluto", Yuragi
     - night is young, Yasutaka Nakata - Give You More, Mykki Blanco - The Plug Won't,
   The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Closer
@@ -93,7 +95,8 @@ Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa 
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
-Traedon: [The Verve Pipe - Medicate Myself, Ayreon - Computer Eyes]
+Traedon: [Vanessa Carlton - Blue Pool, The Verve Pipe - Medicate Myself, Ayreon -
+    Computer Eyes]
 Veyote: ["Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
     Her Right Back (feat. Dances With White Girls), Metrik - Hi!, Tchami - World To
     Me (feat. Luke James), The Mary Nixons - Adrian]
